py/in_python_erros
  File "py/in_python_code.py", line 3
    while 3 <= 0
               ^
SyntaxError: invalid syntax
